# advent-of-code-22

./: pyproject.toml
day-1/: solve.py
day-2/: solve.py
day-3/: solve.py
puzzles/day-1/: solve.py
puzzles/day-2/: solve.py
puzzles/day-4/: solve.py
