[tool.poetry]
name = "advent-of-code-22"
version = "0.1.0"
description = ""
authors = ["Tim Moerkerken <tim@clinicalgraphics.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
jupyter = "^1.0.0"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
